<resources>
    <!--  App Name -->
    <string name="app_name">DegreeAuditMobile</string>

    <!--  Login Form  -->
    <string name="signInText">Sign In</string>
    <string name="passwordText">Password</string>
    <string name="loginSubmitBtnText">Submit</string>
    <string name="updateSubmitBtnText">Submit</string>
    <string name="deleteUserButtonText">Self-Destroy</string>
    <string name="oldPasswordText">Enter your current password</string>
    <string name="newPasswordText">Enter new password</string>
    <string name="timeout_toast">This user is temporarily blocked!</string>

    <!--  Main Menu Activity -->
    <string name="welcome">Welcome, User!</string>
    <string name="progress_button">Check Progress</string>
    <string name="add_semester_button">Add New Semester</string>
    <string name="edit_semester_button">Edit Existing Semester</string>
    <string name="edit_account_info_button">Edit Account Information</string>
    <string name="progress_button_toast">User wanted to check progress</string>
    <string name="add_semester_toast">User wanted to add semester</string>
    <string name="edit_semester_toast">User wanted to edit semester</string>
    <string name="edit_account_info_toast">User wanted to edit account information</string>
    <string name="logout_account_button">Logout</string>
    <string name="delete_sem_class_button">Delete</string>
    <string name="previous">prev</string>

    <!--  Check Progress Activity  -->
    <string name="check_progress_text">Check Progress</string>
    <string name="check_GPA">GPA</string>
    <string name="total_credits">Total Credits</string>
    <string name="total_gpa">GPA</string>
    <string name="major_gpa">Major GPA</string>
    <string name="populateRequirementsButtonText">Show Requirements</string>
    <string name="hideRequirementsButtonText">Hide Requirements</string>

    <!--  Forgot Password  -->
    <string name="incorrect_password_toast">Incorrect password!</string>
    <string name="enter_username">Enter your username</string>
    <string name="incorrect_secret_toast">Incorrect answer!</string>
    <string name="forgotPasswordButtonText">Forgot Password</string>
    <string name="secretQuestion">What is your favorite food?</string>
    <string name="username_not_found_toast">User with that name does not exist!</string>

    <!--  Account Creation  -->
    <string name="username_already_exists_toast">This username is already taken! Please choose a different one.</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="newUserButtonText">Create new user</string>\
    <string name="new_user_text">New Account Registration</string>
    <string name="title_activity_check_progress">CheckProgressActivity</string>

    <!--  Add Semester  -->
    <string name="academicYearText">Academic Year</string>
    <string name="next">Next</string>

    <!-- Add Class   -->
    <string name="departmentText">Department</string>
    <string name="courseNumberText">Course Number</string>
    <string name="add">Add</string>
    <string name="gradeText">Add a grade</string>

    <!--  Edit Semester  -->
    <string name="editSemesterStr">Edit Semester</string>

    <!--  Edit Classes  -->
    <string name="editDeleteClassText">Delete</string>
    <string name="editAddClassText">Add</string>

    <!--  Update password  -->
    <string name="DarkModeButtonText">Switch to dark theme</string>
    <string name="DefaultModeButtonText">Switch to default theme</string>

    <!-- Graduation and Major Entry   -->
    <string name="GraduationMajorEntryText">Graduation and Major Entry</string>
    <string name="nextBtn">Done</string>
</resources>
