<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/proBtn"
        android:title="@string/progress_button"/>
    <item
        android:id="@+id/addSembutton"
        android:title="@string/add_semester_button" />

    <item
        android:id="@+id/editSembutton"
        android:title="@string/edit_semester_button" />

    <item
        android:id="@+id/editAccountInfo"
        android:title="@string/edit_account_info_button" />

    <item
        android:id="@+id/logoutAccount"
        android:title="@string/logout_account_button" />

    <item
        android:id="@+id/deleteSemsClasses"
        android:title="@string/delete_sem_class_button" />
    <item
        android:id="@+id/gradMajorEntry"
        android:title="@string/GraduationMajorEntryText" />

</menu>