<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:id="@+id/welcome_text_view" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_button"
        android:id="@+id/progress_button"
        android:drawablePadding="4dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_semester_button"
        android:id="@+id/add_semester_button"
        android:drawablePadding="4dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_semester_button"
        android:id="@+id/edit_semester_button"
        android:drawablePadding="4dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_account_info_button"
        android:id="@+id/edit_account_info_button"
        android:drawablePadding="4dp"/>
</LinearLayout>