<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_login_form_land">

    <TextView
        android:id="@+id/newUserText"
        android:layout_width="408dp"
        android:layout_height="55dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="40dp"
        android:text="@string/new_user_text"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usernameTextIET"
        android:layout_width="236dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:hint="@string/signInText"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/newUserText"
        app:layout_constraintTop_toBottomOf="@+id/newUserText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordTextIET"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/usernameTextIET"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextIET" />

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="4dp"
        android:text="@string/loginSubmitBtnText"
        app:layout_constraintStart_toEndOf="@+id/usernameTextIET"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextIET" />


</androidx.constraintlayout.widget.ConstraintLayout>